1.6
  * metaparser 2.3 included.

1.5
  * metaparser 2.2 included.

1.4
  * savepath added (lua);
  * metaparser 2.1 included.

1.3
  * -e option;
  * windows version can be run outside directory.
  * cleanups.

1.2
  * -x option;
  * *bold* and /italic/;
  * sandbox enabled for stead3;
  * -i with default autoscript.

1.1
  * metaparser better compatibility;
  * show errors to stdout;
  * windows static build;
  * 9front (Plan9) build.

1.0
  * Initial release